Create a new higher service to handle relation btw two modals

--- a/week5/views/platform.pug
+++ b/week5/views/platform.pug
@@ -6,5 +6,5 @@ block content
         <hr>
         h4 Id: #{platform.id}
         h4 Name : #{platform.name}
-        h4 Posts: #{platform.posts}
+        h4 Users: #{platform.users}
         <hr>
